# cnc-plotter

./: .gitignore  Cargo.toml  README.md  flash.sh  memory.x  op.csv  openocd.gdb  timer_pins.txt
pen/: pen.ino
src/: buf_writer.rs  com.rs  command_handler.rs  interpolator.rs  main.rs  motion_controller_2.rs  motion_controller_advanced.rs  opto.rs  opto_encoder.rs  pwm.rs  pwm_duty.rs  sequence.rs  sequence_data.rs  sequence_wrapper.rs  speed_calc.rs  stop_timer.rs  usb_com.rs
src/ethernet/: ethernet.rs  ethernet_wrapper.rs  global_ethernet.rs  mod.rs
src/pen/: mod.rs  pen_driver.rs  servo_pwm.rs
src/x_axis/: mod.rs  speed_profile.rs  x_driver.rs  x_pwm.rs
src/y_axis/: mod.rs  y_driver.rs
